--- a/assets/css/pattern.css
+++ b/assets/css/pattern.css
@@ -36,6 +36,18 @@ h2 {
     color: var(--semiBlack-color);
 }
 
+section .title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 4rem;
+    color: var(--semiBlack-color);
+    margin: 5rem 0 0 14rem;
+}
+
+h3 {
+    color: var(--white-color);
+    font-size: 2rem;
+}
+
 h4 {
     font-size: 2rem;
 }
