--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,11 @@ footer .line {
     height: 120px;
     width: 1px;
     background-color: white;
+}
 
+footer .about {
+    max-width: 400px;
+    text-align: center;
 }
 
 @media (max-width: 700px) {
